social swag drip drop

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div id="makeup">
         <h2>Make Up</h2>
       </div>
-      <div id="accessories" style="background-color: #3a3335">
+      <div id="accessories">
         <h2>Accessories</h2>
       </div>
       <div id="underrated" style="background-color: #3a3335">
