--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Koulen&family=Libre+Baskerville&family=Nosifer&family=Russo+One&display=swap"
+      rel="stylesheet"
+    />
     <title>DripDrop</title>
   </head>
   <body>
@@ -34,5 +40,8 @@
         <h2>Underrated</h2>
       </div>
     </div>
+    <audio autoplay>
+      <source src="assets/king.m4a" type="audio/x-m4a" />
+    </audio>
   </body>
 </html>
