--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
       <img id="moth" src="assets/gltch.jpg" alt="Moth" />
       <div class="topnav-right">
         <form class="form-inline">
-          <button class="btn btn-outline-success" type="button">Home</button>
-          <button class="btn btn-sm btn-outline-secondary" type="button">
-            Login
-          </button>
+          <button class="btn" type="button">Login</button>
         </form>
       </div>
     </nav>
