--- a/login.html
+++ b/login.html
@@ -1,46 +1,48 @@
-<link rel="stylesheet" href="loginstyle.css" />
-<section class="vh-100 gradient-custom">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
-        <div class="card bg-dark text-white" style="border-radius: 1rem;">
-          <div class="card-body p-5 text-center">
-
-            <div class="mb-md-5 mt-md-4 pb-5">
-
-              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-              <p class="text-white-50 mb-5">Please enter your login and password!</p>
-
-              <div class="form-outline form-white mb-4">
-                <input type="email" id="typeEmailX" class="form-control form-control-lg" />
-                <label class="form-label" for="typeEmailX">Email</label>
-              </div>
-
-              <div class="form-outline form-white mb-4">
-                <input type="password" id="typePasswordX" class="form-control form-control-lg" />
-                <label class="form-label" for="typePasswordX">Password</label>
-              </div>
-
-              <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
-
-              <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
-
-              <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-              </div>
-
-            </div>
-
-            <div>
-              <p class="mb-0">Don't have an account? <a href="#!" class="text-white-50 fw-bold">Sign Up</a>
-              </p>
-            </div>
-
-          </div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login / SignUp Form</title>
+    <link rel="stylesheet" href="loginstyle.css" />
+  </head>
+  <script src="script.js"></script>
+  <body>
+    <div class="container">
+      <form class="form" id="login">
+        <h1 class="formTitle">Login</h1>
+        <div class="formMessage formMessageError">
+          Incorrect username/password combination.
         </div>
-      </div>
+        <div class="formInputGroup">
+          <input
+            type="text"
+            class="formInput"
+            autofocus
+            placeholder="Username or email"
+          />
+          <div class="formInputErrorMessage">This is an error message</div>
+        </div>
+        <div class="formInputGroup">
+          <input
+            type="password"
+            class="formInput"
+            autofocus
+            placeholder="Password"
+          />
+          <div class="formInputErrorMessage"></div>
+        </div>
+        <button class="formButton" type="submit">Continue</button>
+        <p class="formText">
+          <a href="#" class="formLink">Forgot your password?</a>
+        </p>
+        <p class="formText">
+          <a class="formLink" href="./" id="linkCreateAccount"
+            >Don't have an account? Create account</a
+          >
+        </p>
+      </form>
     </div>
-  </div>
-</section>
+  </body>
+</html>
