Completed Login form

--- a/login.html
+++ b/login.html
@@ -12,9 +12,7 @@
     <div class="container">
       <form class="form" id="login">
         <h1 class="formTitle">Login</h1>
-        <div class="formMessage formMessageError">
-          Incorrect username/password combination.
-        </div>
+        <div class="formMessage formMessageError"></div>
         <div class="formInputGroup">
           <input
             type="text"
@@ -22,7 +20,7 @@
             autofocus
             placeholder="Username or email"
           />
-          <div class="formInputErrorMessage">This is an error message</div>
+          <div class="formInputErrorMessage"></div>
         </div>
         <div class="formInputGroup">
           <input
