putting login and index together

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <img id="moth" src="assets/gltch.jpg" alt="Moth" />
       <div class="topnav-right">
         <form class="form-inline">
-          <button class="btn" type="button">Login</button>
+          <button class="btn" type="button">
+            <a href="login.html">Login</a>
+          </button>
         </form>
       </div>
     </nav>
