--- a/login.html
+++ b/login.html
@@ -10,9 +10,8 @@
   <script src="script.js"></script>
   <body>
     <div class="container">
-      <form class="form formHidden" id="login">
+      <form class="form" id="login">
         <h1 class="formTitle">Login</h1>
-        <div class="formMessage formMessageError"></div>
         <div class="formInputGroup">
           <input
             type="text"
@@ -20,7 +19,6 @@
             autofocus
             placeholder="Username or email"
           />
-          <div class="formInputErrorMessage"></div>
         </div>
         <div class="formInputGroup">
           <input
@@ -29,7 +27,6 @@
             autofocus
             placeholder="Password"
           />
-          <div class="formInputErrorMessage"></div>
         </div>
         <button class="formButton" type="submit">Continue</button>
         <p class="formText">
@@ -41,9 +38,8 @@
           >
         </p>
       </form>
-      <form class="form" id="createAccount">
+      <form class="form formHidden" id="createAccount">
         <h1 class="formTitle">Create Account</h1>
-        <div class="formMessage formMessageError"></div>
         <div class="formInputGroup">
           <input
             type="text"
@@ -51,7 +47,6 @@
             autofocus
             placeholder="Username"
           />
-          <div class="formInputErrorMessage"></div>
         </div>
         <div class="formInputGroup">
           <input
@@ -60,7 +55,6 @@
             autofocus
             placeholder="Email Address"
           />
-          <div class="formInputErrorMessage"></div>
         </div>
         <div class="formInputGroup">
           <input
@@ -69,7 +63,6 @@
             autofocus
             placeholder="Password"
           />
-          <div class="formInputErrorMessage"></div>
         </div>
         <div class="formInputGroup">
           <input
@@ -78,7 +71,6 @@
             autofocus
             placeholder="Confirm Password"
           />
-          <div class="formInputErrorMessage"></div>
         </div>
         <button class="formButton" type="submit">Continue</button>
 
