--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
     <title><h1>DripDrop</h1></title>
     <div class="container">
       <div id="fashion">
-        <h2>Street Fashion</h2>
+        <h2><a href="fashion.html">Street Fashion</a></h2>
       </div>
       <div id="makeup">
-        <h2>Make Up</h2>
+        <h2><a href="makeup.html">Make Up</h2></a>
       </div>
       <div id="accessories">
-        <h2>Accessories</h2>
+        <h2><a href="accessories.html">Accessories</h2></a>
       </div>
       <div id="underrated" style="background-color: #3a3335">
-        <h2>Underrated</h2>
+        <h2><a href="underrated.html">Underrated</h2></a>
       </div>
     </div>
     <audio autoplay>
-      <source src="assets/king.m4a" type="audio/x-m4a" />
+      <!--<source src="assets/king.m4a" type="audio/x-m4a" /> -->
     </audio>
   </body>
 </html>
