--- a/fashion.html
+++ b/fashion.html
@@ -8,15 +8,15 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="fashion.css">
+        <script src="fashion.js" async defer></script>
     </head>
     <body>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">   </script>
-<div id="buttons">
-<div type="image" class="buttonup" id="glyphicon glyphicon-chevron-up" style="vertical-align:middle"></div><span id="count">0</span>
-<div type="image" class="buttondw" id="minus" style="vertical-align:middle"></div>
 
-</div>
+        <button id="voteUp">Up</button>
+        <p>Dislikes: <sapn id="upCount"> </sapn></p>
+
+        <button id="voteDown">Down</button>
+        <p>Dislikes: <sapn id="downCount"> </sapn></p>
         
-        <script src="fashion.js" async defer></script>
     </body>
 </html>
